announcements h2 mobile. FAQ spacing fixes

--- a/web/themes/custom/myusf/sass/src/partials/_components.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_components.scss
@@ -108,6 +108,9 @@
 			padding-right: 0.625rem;
 		}
 	}
+	.panel-collapse>.paragraph>.paragraph__column {
+		padding-top: 30px;
+	}
 }
 
 /* Card -- Homepage feeds 
@@ -268,8 +271,8 @@ a.card-rollover {
 		    } 
 		   
 	    	bottom:0;
-		    width: 88%;
-		    padding-top: 0.9375rem;
+		    width: 87%;
+		    padding-top: 0.75rem;
 		    padding-bottom: 1.125rem;
 
 		    &::before {
