--- a/web/themes/custom/myusf/sass/src/partials/_navigation.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_navigation.scss
@@ -1470,6 +1470,10 @@ button.navbar-toggler.navbar-toggler-right.collapsed{
 		text-transform: uppercase!important;
 		border: 0;
 		padding: 1.25rem 0.9375rem 0 0.9375rem;
+
+		@include media-breakpoint-down(phone) {  	
+			padding-left: 1.25rem;						
+		}
 	}
 	.item-list {
 		padding-left: 0.9375rem!important;
